<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/table_background"
        android:orientation="horizontal">

        <me.grantland.widget.AutofitTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/region_depart_asancampus"
            android:textColor="@color/black" />

        <me.grantland.widget.AutofitTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/region_asan_station"
            android:textColor="@color/black" />

        <me.grantland.widget.AutofitTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/region_cheonan_station"
            android:textColor="@color/black" />

        <me.grantland.widget.AutofitTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/region_asan_station"
            android:textColor="@color/black" />

        <me.grantland.widget.AutofitTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/region_arrive_asancampus"
            android:textColor="@color/black" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black" />

</LinearLayout>