<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="kr.o3selab.sunmoonbus.activity.SetupActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/setup_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme"
            app:titleTextColor="@color/white" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/setting_load_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="13dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:tint="#ce8517"
                    app:srcCompat="@drawable/ic_load_data" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/setting_menu_reload_timetable"
                    android:textColor="@color/black" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/setting_load_holiday_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="13dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:tint="#345fd6"
                    app:srcCompat="@drawable/ic_vacation" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/setting_menu_setting_holiday"
                    android:textColor="@color/black" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/setting_remove_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="13dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:tint="#8b2123"
                    app:srcCompat="@drawable/ic_remove_ad" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/setting_menu_remove_ad"
                    android:textColor="@color/black" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/setting_report_kakao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="13dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_kakao" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/setting_menu_kakao"
                    android:textColor="@color/black" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/setting_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="13dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:tint="#5d8452"
                    app:srcCompat="@drawable/ic_about_application" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/setting_menu_about_application"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>